feat:esercizio base

--- a/index.html
+++ b/index.html
@@ -55,9 +55,16 @@
         </div>
     </main>
 
+    <!-- hover section -->
+    <section id="hover-section" class="hover row justify-content-center align-items-center d-none">
+        <button type="button" id="btn-close" class="btn-close" aria-label="Close"></button>
+        <img id="hover-img" src="" alt="" class="col-3">
+
+    </section>
 
 
-    
+
+
 
 
     <script src="https://cdnjs.cloudﬂare.com/ajax/libs/axios/1.6.7/axios.min.js"></script>
